# mcp-foxxy-bridge

./: .channels_cache_v2.json  .dockerignore  .releaserc.json  CHANGELOG.md  Dockerfile  README.md  pyproject.toml
.github/: CODEOWNERS  labeler.yml  labels.yml
.github/workflows/: main.yml
docs/examples/: enhanced-health-checks-config.json
src/mcp_foxxy_bridge/: __main__.py  bridge_server.py  config_loader.py  config_watcher.py  logging_config.py  mcp_server.py  proxy_server.py  server_manager.py  stdio_client_wrapper.py
tests/: test_mcp_server.py
